backend/kubernetes/ingress/ingress-incarna.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: incarna
spec:
  routes:
    - kind: Rule
      match: Host(`api.incarnamind.com`)
      services:
        - name: incarna-service
          port: 80
  tls:
    certResolver: default
